Prepare automated patch release for April 2023 (#34602)
* Updated list of libraries to patch in patch-release.yml

* Reset sources for azure-communication-chat to the release version 1.3.6.

* Prepare azure-communication-chat for 1.3.7 patch release.

* Reset sources for azure-mixedreality-remoterendering to the release version 1.1.16.

* Prepare azure-mixedreality-remoterendering for 1.1.17 patch release.

* Reset sources for azure-monitor-query to the release version 1.1.2.

* Prepare azure-monitor-query for 1.1.3 patch release.

* Reset sources for azure-ai-textanalytics to the release version 5.2.5.

* Prepare azure-ai-textanalytics for 5.2.6 patch release.

* Reset sources for azure-messaging-eventgrid to the release version 4.15.0.

* Prepare azure-messaging-eventgrid for 4.15.1 patch release.

* Reset sources for azure-containers-containerregistry to the release version 1.0.13.

* Prepare azure-containers-containerregistry for 1.0.14 patch release.

* Reset sources for azure-iot-deviceupdate to the release version 1.0.5.

* Prepare azure-iot-deviceupdate for 1.0.6 patch release.

* Reset sources for azure-mixedreality-authentication to the release version 1.2.11.

* Prepare azure-mixedreality-authentication for 1.2.12 patch release.

* Reset sources for azure-security-attestation to the release version 1.1.11.

* Prepare azure-security-attestation for 1.1.12 patch release.

* Reset sources for azure-communication-phonenumbers to the release version 1.1.0.

* Prepare azure-communication-phonenumbers for 1.1.1 patch release.

* Reset sources for azure-messaging-eventhubs to the release version 5.15.3.

* Prepare azure-messaging-eventhubs for 5.15.4 patch release.

* Reset sources for azure-security-confidentialledger to the release version 1.0.7.

* Prepare azure-security-confidentialledger for 1.0.8 patch release.

* Reset sources for azure-communication-common to the release version 1.2.6.

* Prepare azure-c